--- a/mnad.html
+++ b/mnad.html
@@ -98,7 +98,7 @@
                             target="_blank" rel="noopener noreferrer">
                             a website as a poem, a garden, a portal, a place of gathering and more</a>
                         <br><br>
-                        <a href="https://herdimasanggara.com/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://ritual.engineer/" target="_blank" rel="noopener noreferrer">
                             ritual engineer</a>
                         <br><br>
                         <a href=" http://www.ismycomputeron.com/" target="_blank" rel="noopener noreferrer">
@@ -107,12 +107,6 @@
                         <a href="https://wwwwwwwww.jodi.org/" target="_blank" rel="noopener noreferrer">
                             jodi</a>
                         <br><br>
-                        <a href="https://secretgeek.github.io/html_wysiwyg/" target="_blank" rel="noopener noreferrer">
-                            WYSIWYG</a>
-                        <br><br>
-                        <a href="https://thedigitaldiarist.ca/links/rethink-the-web" target="_blank"
-                            rel="noopener noreferrer">
-                            rethink the web</a>
                         <br><br>
                         <a href="https://poetryslash.com/" target="_blank" rel="noopener noreferrer">
                             Poetry Slash</a>
