--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </header>
     <main>
         <section>
-            <p>El club náutico se reúne una vez al mes para navegar por Internet y programar webs poéticas.</p>
+            <p>El club náutico se reúne periodicamente para navegar por Internet y programar webs poéticas.</p>
             <p>* Este club toma como referencia proyectos como <a href="https://sundaysites.cafe/" target="_blank"
                     rel="noopener noreferrer">Sunday Sites</a>, <a href="https://incompleto.github.io/surfclub/"
                     target="_blank" rel="noopener noreferrer">el Surf Club</a> y <a href="https://html.energy/"
