--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
                                 1. Tu ordenador (si no tienes/puedes, ¡compartimos!).
                             </li>
                             <li>
-                                2. Un editor de código o una cuenta en <a href="https://glitch.com/">Glitch</a>, un
-                                editor de código online.
+                                2. Un editor de código
                             </li>
                         </ul>
                     </td>
